<resources>

    <string name="app_name">gallurca_the_remix</string>
    <string name="title_activity_register">Register</string>
    <string name="register_instead">Register instead</string>
    <string name="login_txt">Login</string>
    <string name="login_btn">Login</string>
    <string name="login_psw_hint">Password</string>
    <string name="login_mail_hint">Mail</string>

    <string name="register_mail_hint">Mail</string>
    <string name="register_psw_hint">Password</string>
    <string name="register_apodo_hint">Surname</string>
    <string name="register_txt">Register</string>
    <string name="register_btn">Submit</string>
    <string name="login_instead">Login instead</string>

    <string name="home_timer_txt">The timer of: </string>
    <string name="home_timer_start_btn">Start</string>
    <string name="home_timer_save_btn">Save</string>
    <string name="home_timer_saved_btn">History</string>

    <string name="karuta_roll_btn">Roll</string>
    <string name="karuta_main_txt">Cookie Roller</string>

    <string name="hello_world">Hello Square World!</string>
</resources>